--- a/bg-poc-service/src/main/resources/application.properties
+++ b/bg-poc-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=bg-poc-service
 logging.level.org.springframework.orm=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 management.security.enabled=false
